# server-leaf

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  deny.toml  leaf.example.toml
.cargo/: audit.toml
.github/workflows/: ci.yml  sbom.yml
deploy/: Caddyfile  compose.dev.yaml  compose.yaml
src/: config.rs  main.rs
tests/e2e/: smoke.sh
